--- a/res/layout/central.xml
+++ b/res/layout/central.xml
@@ -4,21 +4,20 @@
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/editText1"
+        <TextView
+            android:id="@+id/cur_dice_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.00"
             android:ems="10"
-            android:text="@string/hello_world" >
-
-        </EditText>
+            android:text="@string/placeholder"
+            android:gravity="center_horizontal|center_vertical" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/roll_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Roll!" />
+            android:text="@string/roll" />
 
     </LinearLayout>
