--- a/res/layout/chooser.xml
+++ b/res/layout/chooser.xml
@@ -3,14 +3,9 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/chooser_placeholder"
+    <ListView
+        android:id="@+id/chooser_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.00"
-        android:ems="10"
-        android:text="@string/placeholder"
-        android:gravity="center_horizontal|center_vertical" />
-
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
