Changed lables on chooser from text to toggle btns

--- a/res/layout/chooser_row.xml
+++ b/res/layout/chooser_row.xml
@@ -2,14 +2,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <TextView
+    <ToggleButton
         android:id="@+id/main_description"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:ems="10"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="" />
+        android:layout_weight="1" />
 
     <Button
         android:id="@+id/roll_button"
