--- a/res/layout/central.xml
+++ b/res/layout/central.xml
@@ -6,17 +6,21 @@
     <TextView
         android:id="@+id/cur_dice_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.00"
-        android:ems="10"
+        android:layout_height="0px"
+        android:layout_weight="1"
         android:text="@string/placeholder"
         android:gravity="center_horizontal|center_vertical" />
 
     <Button
         android:id="@+id/roll_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="0px"
+        android:layout_weight="6"
+
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip"
+        android:layout_marginBottom="20dip"
+
         android:text="@string/roll" />
 
 </LinearLayout>
