--- a/res/layout/chooser_row.xml
+++ b/res/layout/chooser_row.xml
@@ -5,13 +5,13 @@
     <ToggleButton
         android:id="@+id/main_description"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_weight="1" />
+        android:layout_width="0px"
+        android:layout_weight="2" />
 
     <Button
-        android:id="@+id/roll_button"
-        android:layout_width="match_parent"
+        android:id="@+id/edit_button"
         android:layout_height="wrap_content"
+        android:layout_width="0px"
         android:layout_weight="1"
         android:text="@string/edit" />
 
