--- a/res/layout/central.xml
+++ b/res/layout/central.xml
@@ -4,11 +4,11 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/cur_dice_description"
+        android:id="@+id/selection_text"
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1"
-        android:text="@string/placeholder"
+        android:text="@string/empty_selection"
         android:gravity="center_horizontal|center_vertical" />
 
     <Button
