Defined layouts for statistics fragment.
Also removed overrides to silence Java complaints

--- a/res/layout/statistics.xml
+++ b/res/layout/statistics.xml
@@ -3,14 +3,58 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/stats_placeholder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.00"
-        android:ems="10"
-        android:text="@string/placeholder"
-        android:gravity="center_horizontal|center_vertical" />
+    <LinearLayout 
+        android:id="@+id/statistic_mode_switch_buttons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
 
+        <Button
+            android:id="@+id/last_roll_button"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/last_roll" />
+
+        <Button
+            android:id="@+id/all_rolls_button"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/all_rolls" />
+
+    </LinearLayout>
+    
+
+    <LinearLayout 
+        android:id="@+id/last_roll_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <ListView
+            android:id="@+id/dice_set_sums_list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+        <GridView
+            android:id="@+id/dice_rolls_grid"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+    </LinearLayout>
+
+    <LinearLayout 
+        android:id="@+id/all_rolls_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:visibility="gone" >
+
+        <ListView
+            android:id="@+id/all_rolls_list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+    </LinearLayout>
 
 </LinearLayout>
