Added ability to change view in statistics w/buttons

--- a/res/layout/statistics.xml
+++ b/res/layout/statistics.xml
@@ -8,19 +8,35 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/last_roll_button"
+        <ToggleButton
+            android:id="@+id/change_view_button"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/last_roll" />
+            android:checked="true"
+            android:textOn="@string/last_roll"
+            android:textOff="@string/all_rolls"
+            android:layout_weight="1" />
 
-        <Button
-            android:id="@+id/all_rolls_button"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/all_rolls" />
+        <!-- <ToggleButton -->
+        <!--     android:id="@+id/all_rolls_button" -->
+        <!--     android:layout_width="0px" -->
+        <!--     android:layout_height="wrap_content" -->
+        <!--     android:checked="false" -->
+        <!--     android:textOn="@string/all_rolls" -->
+        <!--     android:textOff="@string/all_rolls" -->
+        <!--     android:layout_weight="1" /> -->
+
+        <!-- <Switch -->
+        <!--     android:id="@+id/all_rolls_button" -->
+        <!--     android:layout_width="0px" -->
+        <!--     android:layout_height="wrap_content" -->
+        <!--     android:checked="false" -->
+        <!--     android:textOn="@string/last_roll" -->
+        <!--     android:textOff="@string/all_rolls" -->
+        <!--     android:text="" -->
+        <!--     android:switchPadding="0px" -->
+        <!--     android:layout_weight="1" /> -->
+
 
     </LinearLayout>
     
@@ -30,6 +46,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
+
+        <!-- Test message -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="@string/last_roll"
+        />
 
         <ListView
             android:id="@+id/dice_set_sums_list"
@@ -49,6 +72,13 @@
         android:layout_height="fill_parent"
         android:orientation="vertical"
         android:visibility="gone" >
+
+        <!-- Test message -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="@string/all_rolls"
+        />
 
         <ListView
             android:id="@+id/all_rolls_list"
