--- a/res/layout/creator.xml
+++ b/res/layout/creator.xml
@@ -9,6 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/setname_hint"
+        android:gravity="center"
         android:ems="10" />
 
     <EditText
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name_text"
         android:layout_alignParentRight="true"
+        android:gravity="center"
         android:ems="10"
         android:inputType="numberSigned" />
 
