--- a/res/layout/dice_box.xml
+++ b/res/layout/dice_box.xml
@@ -1,32 +1,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="#CCC"
-    android:layout_margin="15dip" 
+    android:layout_margin="5dip" 
+    android:padding="5dip" 
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/die_value"
         android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="000" />
+        android:layout_gravity="center" />
 
     <View
         android:id="@+id/dividing_bar"
         android:background="#FFF"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_width="fill_parent"
+        android:layout_marginLeft="2dip"
+        android:layout_marginRight="2dip"
+        android:layout_width="30dip"
         android:layout_height="2dip" />
 
     <TextView
         android:id="@+id/die_face_count"
         android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0px"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="000" />
+        android:layout_gravity="center" />
 
 </LinearLayout>
