--- a/res/layout/statistics_row.xml
+++ b/res/layout/statistics_row.xml
@@ -10,9 +10,11 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" />
 
-    <TableLayout
+    <LinearLayout
         android:id="@+id/dice_rolls_grid"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
 
 </LinearLayout>
