Added delete button to creator to reuse later

--- a/res/layout/creator.xml
+++ b/res/layout/creator.xml
@@ -48,6 +48,13 @@
             android:text="@string/save" />
 
         <Button
+            android:id="@+id/delete_button"
+            android:layout_height="wrap_content"
+            android:layout_width="0px"
+            android:layout_weight="1"
+            android:text="@string/delete" />
+
+        <Button
             android:id="@+id/cancel_button"
             android:layout_height="wrap_content"
             android:layout_width="0px"
