--- a/res/layout/statistics_row.xml
+++ b/res/layout/statistics_row.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/time_text"
+        android:id="@+id/date_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="#000"
         android:text="time" />
 
