Changed SDK version to 10, changed theme for compatibility

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,11 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="@android:Theme.Holo.Light">
-        <item name="android:actionBarStyle">@style/CustomActionBarStyle</item>
-    </style>
-
-    <style name="CustomActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:displayOptions"></item>
-    </style>
-
+     <style name="AppTheme" parent="@android:Theme.Light.NoTitleBar">
+     </style>
+ 
 </resources>
