--- a/res/layout/chooser_row.xml
+++ b/res/layout/chooser_row.xml
@@ -1,17 +1,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="wrap_content"
+    android:baselineAligned="false" >
 
     <ToggleButton
         android:id="@+id/main_description"
-        android:layout_height="wrap_content"
         android:layout_width="0px"
+        android:layout_height="match_parent"
         android:layout_weight="2" />
 
     <Button
         android:id="@+id/edit_button"
-        android:layout_height="wrap_content"
         android:layout_width="0px"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/edit" />
 
