Minor UI tweaks to set creator.
Dice count defaults to 1, and name text box is single-line.

--- a/res/layout/creator.xml
+++ b/res/layout/creator.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/setname_hint"
         android:gravity="center"
+        android:singleLine="true"
         android:ems="10" />
 
     <EditText
