--- a/res/layout/add_dice.xml
+++ b/res/layout/add_dice.xml
@@ -1,5 +1,10 @@
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/add_dice_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:ems="10"
-    android:inputType="number" />
+    android:inputType="number" >
+
+    <requestFocus />
+
+</EditText>
