--- a/res/layout/statistics.xml
+++ b/res/layout/statistics.xml
@@ -15,7 +15,8 @@
         android:layout_weight="8"
         android:layout_width="fill_parent"
         android:layout_height="0px"
-        android:visibility="gone" >
+        android:visibility="gone"
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_weight="1"
